--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
--r packages/ml_api/requirements.txt
+# -r packages/ml_api/requirements.txt
+-e "E:\Projets\DVF\ProdAPI\packages\ml_api\requirements.txt"
